--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!-- Custom default theme colors -->
+    <style name="CustomAppTheme" parent="AppTheme">
+        <item name="titleTextColor">@color/titleTextColor</item>
+        <item name="iconTint">#000000</item>
+    </style>
 </resources>
