--- a/app/src/main/res/layout/activity_select_exercises.xml
+++ b/app/src/main/res/layout/activity_select_exercises.xml
@@ -18,6 +18,7 @@
         app:layout_constraintVertical_bias="0.009" />
 
     <Button
+        android:id="@+id/button_exercises_selected"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/create_workout_button"
