--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/exercise_textView"
+            android:id="@+id/item_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Exercise name"
