--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".controllers.MainActivity">
+    tools:context=".controllers.MainActivity"
+    android:id="@+id/main_activity_background">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/main_activity_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name_display"
@@ -27,7 +28,7 @@
         android:text="@string/button_create_workout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/main_activity_title" />
 
     <Button
         android:id="@+id/button_edit_workout"
