--- a/app/src/main/res/layout/activity_create_workout.xml
+++ b/app/src/main/res/layout/activity_create_workout.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".controllers.CreateWorkoutActivity">
+    tools:context=".controllers.CreateWorkoutActivity"
+    android:id="@+id/create_workout_background">
 
     <FrameLayout
         android:id="@+id/editable_table_placeholder"
