--- a/app/src/main/res/layout/activity_edit_workout.xml
+++ b/app/src/main/res/layout/activity_edit_workout.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".controllers.EditWorkoutActivity">
+    tools:context=".controllers.EditWorkoutActivity"
+    android:id="@+id/edit_workout_background">
 
     <FrameLayout
         android:id="@+id/table_placeholder_edit"
