--- a/app/src/main/res/layout/activity_perform_workout.xml
+++ b/app/src/main/res/layout/activity_perform_workout.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".controllers.PerformWorkoutActivity">
+    tools:context=".controllers.PerformWorkoutActivity"
+    android:id="@+id/perform_workout_background">
 
     <FrameLayout
         android:id="@+id/table_placeholder"
