--- a/app/src/main/res/layout/activity_select_exercises.xml
+++ b/app/src/main/res/layout/activity_select_exercises.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".controllers.SelectExercises">
+    android:theme="@style/Theme.Design.NoActionBar"
+    tools:context=".controllers.SelectExercises"
+    android:id="@+id/select_exercises_background">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -26,32 +28,30 @@
 
     </com.google.android.material.tabs.TabLayout>
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPager"
-        app:layout_constraintTop_toBottomOf="@id/tabLayout"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/exercises_recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="630dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tabLayout"
-        app:layout_constraintVertical_bias="0.009" />
-
-    <Button
-        android:id="@+id/button_exercises_selected"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/create_workout_button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/exercises_recyclerView"
-        app:layout_constraintVertical_bias="0.372" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tabLayout">
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPager"
+            app:layout_constraintTop_toBottomOf="@id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_create_workout"
+            android:layout_width="229dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="532dp"
+            android:contentDescription="@string/create_new_workout_button"
+            android:src="@drawable/ic_baseline_check_24"
+            android:layout_marginLeft="300dp"
+            android:layout_marginStart="300dp" />
+    </FrameLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
